anotherpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-locked
spec:
  containers:
    - image: mysql:8-debian
      name: mysql
