my-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-yuppi
  labels:
    app: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-pod
        image: nginx:1.14.2
        ports:
        - containerPort: 80
