podmanifest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod1
  labels:
    app: nginx-demo
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      volumeMounts:
        - name: nginx-pv-storage
          mountPath: /data
  volumes:
    - name: nginx-pv-storage
      persistentVolumeClaim:
        claimName: nginx-pvc
